# Plum-OS

./: .gitignore  CMakeLists.txt  limine.conf  readme.md  setup-TAP.sh
UEFI_BOOT/: Loader.cpp  Loader.hpp  boot.cpp  boot.hpp
src/: Kernel.cpp  kernel_entry.cpp
src/Drivers/: Keyboard.cpp  Keyboard.hpp
src/Drivers/GPU/: Render.cpp  Render.hpp  framebuffer.cpp  framebuffer.hpp
src/Drivers/GPU/OpenPL/: OpenPL.cpp  OpenPL.hpp
src/Drivers/Network/: Common.hpp  Ethernet.cpp  Ethernet.hpp  Net_Device.hpp
src/Drivers/Network/Drivers/: E1000.cpp  E1000.hpp  RTL8139.cpp  RTL8139.hpp
src/Drivers/Network/IPv4/: ICMP.cpp  ICMP.hpp  IPv4.cpp  IPv4.hpp  UDP.cpp  UDP.hpp
src/Drivers/USB/xHCI/: xHCI.cpp  xHCI.hpp  xHCI_device.cpp
src/Drivers/achi/: ahci_device.h  ahci_port.cpp  ahci_port.h
src/Drivers/acpi/: acpi.cpp  acpi.h  uacpi_impl.cpp
src/Drivers/fs/FAT32/: fat32.cpp  fat32.hpp
src/Drivers/fs/partition/: partition_manager.cpp  partition_manager.h
src/Drivers/hpet/: hpet.cpp  hpet.h
src/Drivers/ps2/: ps2.cpp  ps2.h
src/User_Programs/Chess/: Shaders.cpp  main.cpp  main.hpp
src/User_Programs/MyCraft/: Shaders.cpp  main.cpp  main.hpp
src/arch/x86_64/Common/: Common.cpp  Common.hpp
src/arch/x86_64/IDT/: APIC.cpp  APIC.hpp  IDT.cpp  IDT.hpp  PIT.cpp  PIT.hpp  handlers.cpp  lapic.cpp  lapic.h
src/arch/x86_64/gdt/: gdt.cpp
src/arch/x86_64/syscall/: syscall.asm  syscall.cpp  syscall.h
src/kernel/: Paging.cpp  Paging.hpp  Sleep.cpp  enter_user_space.asm  log.h  system.cpp  system.hpp
src/kernel/Memory/: heap.cpp  heap.hpp  mem_helper.h
src/libs/std/: math.hpp  math_types.hpp  trigonometry.cpp  trigonometry.hpp
src_boot/: boot.cpp  kernel_main.cpp  setup.asm
